src/test/deca/context/valid/created/testsGeneraux/thisMulti.deca
class A{
    int x;
}
class B {
    A param;
    int getX(){
        return this.param.x;
    }
}